Fixed spacing for tables

--- a/frontend/react-app/src/css/TaskList.css
+++ b/frontend/react-app/src/css/TaskList.css
@@ -1,6 +1,7 @@
-.container{
+.containerTaskList{
     display: flex;
     flex-direction: column;
+    margin-bottom: 40px;
 }
 table{
     width: 100%;
